--- a/css/game.css
+++ b/css/game.css
@@ -1,10 +1,10 @@
 #message {
-    color: #80bdff;
+    color: #f8f9fa;
     font-family: "Lucida Console";
 }
 
 #content {
-    height: 250px;
+    height: 400px;
     width: 100%;
     padding: 15px 15px 15px 15px;
 
@@ -18,7 +18,7 @@ input[type="text"] {
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
 
-    color: #80bdff;
+    color: #f8f9fa;
     padding-left: 10px;
 
     width: 100%;
@@ -34,12 +34,12 @@ input[type="text"]:focus {
 }
 
 label {
-    color: #80bdff;
+    color: #f8f9fa;
 }
 
 h2 {
     align-content: center;
-    color: #80bdff;
+    color: #f8f9fa;
 }
 
 hr {
@@ -49,7 +49,7 @@ hr {
 }
 
 #title {
-    color: #80bdff;
+    color: #f8f9fa;
 }
 
 #by-line {
@@ -57,7 +57,7 @@ hr {
 }
 
 #footer {
-    color: #80bdff;
+    color: #f8f9fa;
     text-align: center;
 }
 
@@ -96,7 +96,50 @@ hr {
     background-image: -webkit-gradient(linear,
     left bottom,
     left top,
-    color-stop(0.44, rgb(122,153,217)),
-    color-stop(0.72, rgb(73,125,189)),
-    color-stop(0.86, rgb(28,58,148)));
+    color-stop(0.44, rgb(217, 216, 216)),
+    color-stop(0.72, rgb(189, 186, 189)),
+    color-stop(0.86, rgb(112, 108, 113)));
+}
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #000000;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar
+{
+    width: 10px;
+    background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    background-image: -webkit-gradient(linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(217, 216, 216)),
+    color-stop(0.72, rgb(189, 186, 189)),
+    color-stop(0.86, rgb(112, 108, 113)));
+}
+
+#map {
+    display: flex;
+    align-items: center;
+    vertical-align: center;
+    horiz-align: center;
+
+    color: #f8f9fa;
+}
+
+#map-row {
+    height: 25px;
+    width: 125px;
+}
+
+#map-col {
+    width: 25px;
+    height: 25px;
 }
